# ymir-harness

./: .containerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Containerfile.ymir-harness-source-worker  Containerfile.ymir-harness-worker  LICENSE  README.md  hatch_build.py  pyproject.toml  rhel-config.json
examples/benchmark_cases/: README.md  cases.yaml
examples/benchmark_cases/expected/: RHEL-00001.expected.json  RHEL-114059.expected.json
examples/benchmark_cases/jiras/RHEL-00001/: issue.json
examples/benchmark_cases/jiras/RHEL-114059/: comments.json  issue.json  links.json  starting-issue.json
examples/benchmark_cases/mock_data/triage/: RHEL-114059.json
examples/benchmark_cases/web_cache/RHEL-114059/: manifest.json
examples/benchmark_cases/web_cache/RHEL-114059/gitlab/: changes.json  commits.json  merge_request.json  merge_request.patch
examples/benchmark_cases/web_cache/RHEL-114059/jira/patches/: 001.patch
src/ymir_harness/: __init__.py  __main__.py  artifacts.py  capture_missing.py  cli.py  collect_case.py  comparison.py  enforcement.py  jira_mock.py  jira_replay.py  koji_replay.py  llm_judge.py  mock_repos.py  models.py  provenance.py  replay.py  replay_metadata.py  reports.py  runner.py  safety.py  scoring.py  source_fixtures.py  validation.py  workflow_worker.py  ymir_gateway.py  ymir_source.py  ymir_workflows.py
tests/: test_capture_missing.py  test_cli.py  test_collect_case.py  test_comparison.py  test_enforcement.py  test_jira_mock.py  test_koji_replay.py  test_replay.py  test_replay_metadata.py  test_run_models.py  test_runner.py  test_safety.py  test_scoring.py  test_source_fixtures.py  test_validation.py  test_version.py  test_ymir_gateway.py  test_ymir_import_smoke.py  test_ymir_source.py  test_ymir_workflows.py
