[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ymir-harness"
dynamic = ["version"]
description = "Fixture validation and deterministic scoring for Ymir benchmark runs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Ymir Harness contributors" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]

[project.scripts]
ymir-harness = "ymir_harness.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src/ymir_harness"]

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.+)$"
