[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ymir-harness"
dynamic = ["version", "dependencies"]
description = "Fixture validation and deterministic scoring for Ymir benchmark runs"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
  { name = "Ymir Harness contributors" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]

[project.scripts]
benchmark = "ymir_harness.cli:main"
ymir-harness = "ymir_harness.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.hatch.metadata.hooks.custom]

[[tool.uv.dependency-metadata]]
name = "koji"
requires-dist = [
  "defusedxml",
  "python-dateutil",
  "requests",
  "six",
]

[tool.uv.sources]
ymir-common = { path = "ui-workflows/ymir/common", editable = true }
ymir-tools = { path = "ui-workflows/ymir/tools", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ymir_harness"]

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.+)$"
